gcc/testsuite/rust/rustc/ui/error-codes/E0454.rs
#[link(name = "")] extern {}
// { dg-error ".E0454." "" { target *-*-* } .-1 }

fn main() {
}

